wrong spec for text-transform

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -580,7 +580,7 @@ $module-news-events-home-type-size-mobile = rem(12px)
 $module-news-events-home-type-size-desktop = rem(12px)
 
 $module-news-events-home-title-font = $sans-serif
-$module-news-events-home-title-transform = normal
+$module-news-events-home-title-transform = none
 $module-news-events-home-title-color = $navy
 $module-news-events-home-title-hover-color = $white
 $module-news-events-home-title-size-mobile = rem(18px)
@@ -699,7 +699,7 @@ $list-intro-headline-size-mobile = rem(36px)
 $list-intro-headline-size-desktop = rem(60px)
 
 $list-intro-subheadline-font = $sans-serif
-$list-intro-subheadline-transform = normal
+$list-intro-subheadline-transform = none
 $list-intro-subheadline-color = $light-blue
 $list-intro-subheadline-size-mobile = rem(21px)
 $list-intro-subheadline-size-desktop = rem(32px)
@@ -744,7 +744,7 @@ $about-page-about-section-text-size-mobile = rem(18px)
 $about-page-about-section-text-size-desktop = rem(18px)
 $about-page-about-section-text-color = $navy
 $about-page-about-section-text-font = $sans-serif
-$about-page-about-section-text-transform = normal
+$about-page-about-section-text-transform = none
 
 
 $about-page-mission-section-background = $navy
@@ -758,7 +758,7 @@ $about-page-mission-section-text-size-mobile = rem(18px)
 $about-page-mission-section-text-size-desktop = rem(18px)
 $about-page-mission-section-text-color = $white
 $about-page-mission-section-text-font = $sans-serif
-$about-page-mission-section-text-transform = normal
+$about-page-mission-section-text-transform = none
 
 
 $about-page-mayor-section-intro-size-mobile = rem(14px)
@@ -770,14 +770,14 @@ $about-page-mayor-section-intro-color = $light-blue
 $about-page-mayor-section-headline-size-mobile = rem(32px)
 $about-page-mayor-section-headline-size-desktop = rem(36px)
 $about-page-mayor-section-headline-font = $sans-serif-headline
-$about-page-mayor-section-headline-transform = normal
+$about-page-mayor-section-headline-transform = none
 $about-page-mayor-section-headline-color = $navy
 
 $about-page-mayor-section-subheadline-size-mobile = rem(18px)
 $about-page-mayor-section-subheadline-size-desktop = rem(21px)
 $about-page-mayor-section-subheadline-font = $serif
 $about-page-mayor-section-subheadline-style = italic
-$about-page-mayor-section-subheadline-transform = normal
+$about-page-mayor-section-subheadline-transform = none
 $about-page-mayor-section-subheadline-color = $light-blue
 
 $about-page-mayor-section-text-size-mobile = rem(18px)
@@ -785,14 +785,14 @@ $about-page-mayor-section-text-size-desktop = rem(18px)
 $about-page-mayor-section-text-color = $navy
 $about-page-mayor-section-text-font = $sans-serif
 $about-page-mayor-section-text-font-weight = $font-weight.normal
-$about-page-mayor-section-text-transform = normal
+$about-page-mayor-section-text-transform = none
 
 $about-page-mayor-section-name-size-mobile = rem(18px)
 $about-page-mayor-section-name-size-desktop = rem(18px)
 $about-page-mayor-section-name-color = $navy
 $about-page-mayor-section-name-font = $sans-serif
 $about-page-mayor-section-name-font-weight = $font-weight.bold
-$about-page-mayor-section-name-transform = normal
+$about-page-mayor-section-name-transform = none
 
 
 $about-page-history-section-background-color = $black
@@ -807,7 +807,7 @@ $about-page-history-section-text-size-desktop = rem(18px)
 $about-page-history-section-text-color = $white
 $about-page-history-section-text-font = $sans-serif
 $about-page-history-section-text-font-weight = $font-weight.normal
-$about-page-history-section-text-transform = normal
+$about-page-history-section-text-transform = none
 
 
 $about-page-fact-block-background-color = $white
@@ -824,7 +824,7 @@ $about-page-fact-block-text-size-desktop = rem(24px)
 $about-page-fact-block-text-color = $light-blue
 $about-page-fact-block-text-font = $sans-serif
 $about-page-fact-block-text-font-weight = $font-weight.bold
-$about-page-fact-block-text-transform = normal
+$about-page-fact-block-text-transform = none
 
 $about-page-fact-block-reference-size-mobile = rem(14px)
 $about-page-fact-block-reference-size-desktop = rem(16px)
@@ -846,7 +846,7 @@ $contact-page-address-section-title-transform = uppercase
 $contact-page-address-section-size = rem(18px)
 $contact-page-address-section-color = $navy
 $contact-page-address-section-font = $sans-serif
-$contact-page-address-section-transform = normal
+$contact-page-address-section-transform = none
 
 $contact-page-info-request-section-background = $dark-blue
 $contact-page-info-request-section-color = $white
@@ -947,7 +947,7 @@ $news-events-intro-headline-size-mobile = rem(36px)
 $news-events-intro-headline-size-desktop = rem(60px)
 
 $news-events-intro-subheadline-font = $sans-serif
-$news-events-intro-subheadline-transform = normal
+$news-events-intro-subheadline-transform = none
 $news-events-intro-subheadline-color = $light-blue
 $news-events-intro-subheadline-size-mobile = rem(21px)
 $news-events-intro-subheadline-size-desktop = rem(32px)
@@ -979,7 +979,7 @@ $employment-instructions-title-mobile = rem(21px)
 $employment-instructions-title-desktop = rem(24px)
 
 $employment-instructions-text-font = $sans-serif
-$employment-instructions-text-transform = normal
+$employment-instructions-text-transform = none
 $employment-instructions-text-color = $navy
 $employment-instructions-text-mobile = rem(16px)
 $employment-instructions-text-desktop = rem(18px)
