--- a/templates/singles/homepage/index.twig
+++ b/templates/singles/homepage/index.twig
@@ -26,6 +26,8 @@
 {# MAIN COLUMN CONTENT #}
 {% block main %}
 
+{% cache using key 'homepage_section_top' %}
+
   {{ include('modules/content/_block-mayor-welcome') }}
 
   {{ include('modules/content/_block-quick-links') }}
@@ -33,6 +35,8 @@
   {{ include('modules/content/_block-spotlight', {spotlightType: 'champions'}) }}
 
   {{ include('modules/content/_block-story-share') }}
+
+{% endcache %}
 
 {% endblock %}
 
@@ -53,6 +57,8 @@
 {# SECONDARY CONTENT #}
 {% block content_two %}
 
+{% cache using key 'homepage_section_bottom' %}
+
   {{ include('modules/content/_block-home-featured-video') }}
 
   <section id="block--spotlights-two">
@@ -63,6 +69,8 @@
   {{ include('modules/content/_block-location') }}
 
   {{ include('modules/content/_block-process') }}
+
+{% endcache %}
 
 {% endblock %}
 
