--- a/templates/structure/departments/_entry.twig
+++ b/templates/structure/departments/_entry.twig
@@ -16,7 +16,7 @@
 
 {# HTML #}
 {% block main %}
-
+  {% cache %}
     <header>
     <h1>{{ entry.title | typogrify }}</h1>
     <p class="lead">{{ entry.leadIn | typogrify }}</p>
@@ -24,7 +24,7 @@
 
     {% include 'modules/content/_page-content' %}
     {% include 'modules/content/_page-content-attachments' %}
-
+  {% endcache %}
 {% endblock %}
 
 {# ASIDE #}
