--- a/templates/structure/departments/index.twig
+++ b/templates/structure/departments/index.twig
@@ -15,9 +15,9 @@
 
 {# HTML #}
 {% block main %}
-
+{% cache %}
     {% set subPages = craft.entries.section('departments').orderBy('title').all() %}
 
     {% include 'structure/pages/_types/_landing' with { subPages: subPages } %}
-
+{% endcache %}
 {% endblock %}
