--- a/templates/structure/minutes-agendas/_category.twig
+++ b/templates/structure/minutes-agendas/_category.twig
@@ -5,6 +5,7 @@
 {% extends "layouts/type/_list" %}
 
 {% block listContent %}
+  {% cache %}
 
 {% set slug = craft.app.request.getSegment(3) %}
 {% set landing = craft.entries.section('minutesAgendasLanding').one() %}
@@ -22,6 +23,7 @@
 </ul>
 </section>
 
+  {% endcache %}
 {% endblock %}
 
 
