--- a/templates/modules/content/_block-sub-pages.twig
+++ b/templates/modules/content/_block-sub-pages.twig
@@ -6,6 +6,7 @@
 {% endif %}
 
 {% if subPages | length %}
+{% cache using key 'aside-subpages_' ~ craft.app.request.pathInfo %}
 <div id="block--subpages">
   <h3>Pages</h3>
   <ul>
@@ -14,4 +15,5 @@
     {% endnav %}
   </ul>
 </div>
+{% endcache %}
 {% endif %}
