--- a/templates/singles/directory/index.twig
+++ b/templates/singles/directory/index.twig
@@ -21,6 +21,7 @@
   {% set departments = craft.entries(params).all() %}
 
   {% for department in departments %}
+    {% cache using key 'department-directory-' ~ department.id ~ '-' ~ department.slug %}
     {% set params = {
       section : 'staff',
       orderBy : 'title asc',
@@ -43,11 +44,12 @@
       <ul>
       {% for member in departmentStaffMembers %}
         {% include "singles/directory/_member" %}
-      {% endfor %}﻿
+      {% endfor %}
       </ul>
       {% if department.email %}{% include "singles/directory/_form" %}{% endif %}
     </section>
-  {% endfor %}﻿
+    {% endcache %}
+  {% endfor %}
 </section>
 
 
