--- a/templates/structure/jobs/index.twig
+++ b/templates/structure/jobs/index.twig
@@ -3,7 +3,6 @@
 #}
 
 {% extends "layouts/type/_list" %}
-{% set jobs = craft.entries.section('jobs').all() %}
 
 
 
@@ -16,6 +15,8 @@ esque sed porttitor purus. Proin quis arcu et elit ornare faucibus eget vel quam
 {% endblock %}
 
 {% block listContent %}
+{% cache %}
+{% set jobs = craft.entries.section('jobs').all() %}
 <section class="list--content">
     <ul>
     {% for job in jobs %}
@@ -23,4 +24,5 @@ esque sed porttitor purus. Proin quis arcu et elit ornare faucibus eget vel quam
     {% endfor %}﻿
     </ul>
 </section>
+{% endcache %}
 {% endblock %}
