--- a/templates/structure/news-events/_entry.twig
+++ b/templates/structure/news-events/_entry.twig
@@ -19,11 +19,13 @@
 
 {# MAIN #}
 {% block main %}
+  {% cache %}
 
 <article class="news-events-article news-events-article--{{ entry.type }}">
   {% include "structure/news-events/_types/_" ~ entry.type %}
 </article>
 
+  {% endcache %}
 {% endblock %}
 
 {# ASIDE #}
