--- a/templates/structure/pages/_types/_standard.twig
+++ b/templates/structure/pages/_types/_standard.twig
@@ -1,3 +1,4 @@
+{% cache %}
 <header>
   <h1>{{ entry.title | typogrify }}</h1>
   <p class="lead">{{ entry.leadIn | typogrify }}</p>
@@ -5,3 +6,4 @@
 
 {% include "modules/content/_page-content" %}
 {% include "modules/content/_page-content-attachments" %}
+{% endcache %}
