--- a/templates/structure/staff/_entry.twig
+++ b/templates/structure/staff/_entry.twig
@@ -14,7 +14,7 @@
 
 {# HTML #}
 {% block main %}
-
+{% cache %}
 <section id="staff-profile" itemscope itemtype="http://schema.org/Person">
   {% if entry.staffPhoto | length %}
     <picture itemprop="image">
@@ -81,5 +81,5 @@
   {% if entry.bio %}<p>{{ entry.bio | typogrify }}</p>{% endif %}
 
 </section>
-
+{% endcache %}
 {% endblock %}
