--- a/src/styles/site/_parallax.styl
+++ b/src/styles/site/_parallax.styl
@@ -23,13 +23,14 @@ $newsImageRatio = percentage(1/3)
       right: 0
       bottom: 0
       left: 0
-      z-index: auto
     .parallax__layer--back
       transform: translateZ(-1px) scale(2)
+      z-index: 0
     .parallax__layer--base
       height 'calc(%s - %s)' % (100vh $top-menu-height-desktop)
       transform-style: preserve-3d
       transform: translate3d(0)
+      z-index: 1
 
 
   .page-section--homepage
