--- a/src/styles/modules/_block-quick-links.styl
+++ b/src/styles/modules/_block-quick-links.styl
@@ -95,3 +95,32 @@ aside #block--quick-links
       color $module-quick-links-link-hover-color
       &:after
         transform translateX(0.35em)
+  li.quick-links--parent
+    border-bottom $border-width-base solid $gray94
+    padding-bottom 1em
+  
+  li.active
+    a
+      color $navy
+      text-decoration $module-quick-links-link-decoration
+      transition: $link-transition
+      &:after
+        content unset
+        display none
+      &:before
+        background-color: $module-quick-links-arrow-color
+        background-repeat: no-repeat
+        background-size: cover
+        content: " "
+        display inline-block
+        height rem(16px)
+        width rem(16px)
+        mask: embedurl("../sprites/arrow-right.svg", "utf8") no-repeat 50% 50%/12px 12px
+        margin-right: 0.15em
+        transition: background-color $transition-timing, transform $transition-timing
+        vertical-align middle
+
+      &:hover
+        color $navy
+        &:after
+          transform none
