--- a/templates/modules/content/_block-sub-pages.twig
+++ b/templates/modules/content/_block-sub-pages.twig
@@ -5,13 +5,22 @@
   }).all() %}
 {% endif %}
 
+{% set parent = null %}
+{% if (entry.section.handle == 'departmentsContent') %}
+  {% set parentSlug = craft.app.request.getSegment(3) %}
+  {% set parent = craft.entries.slug(parentSlug).one() %}
+{% elseif subPages is not defined %}
+  {% set parent = craft.entries.ancestorOf(entry).order('lft desc').one() %}
+{% endif %}
+
 {% if subPages | length %}
 {% cache using key 'aside-subpages_' ~ craft.app.request.pathInfo %}
 <div id="block--subpages">
   <h3>Pages</h3>
   <ul>
-    {% nav entry in subPages %}
-      <li class="quick-links--item"><a href="{{entry.url}}" title="{{ entry.title }}">{{ entry.title }}</a></li>
+    {% if parent is not null %}<li class="quick-links--parent">Back to: <a href="{{ parent.url }}" title="Back to {{ parent.title }}">{{ parent.title }}</a></li>{% endif %}
+    {% nav page in subPages %}
+      <li class="quick-links--item{{ page.id == entry.id ? ' active' }}"><a href="{{page.url}}" title="{{ page.title }}">{{ page.title }}</a></li>
     {% endnav %}
   </ul>
 </div>
