--- a/src/styles/modules/_block-quick-links.styl
+++ b/src/styles/modules/_block-quick-links.styl
@@ -7,6 +7,7 @@
   +above(xl)
     padding rem(66.5px) calc((100vw * (1/36))) rem(65px)
   > h3
+    color $module-quick-links-title-color
     font-family $module-quick-links-title-font
     font-size $module-quick-links-title-size
     margin 0 0 rem(30px)
