--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -365,6 +365,10 @@ $module-quick-links-title-font = $sans-serif-headline
 $module-quick-links-title-size = rem(24px)
 $module-quick-links-title-transform = uppercase
 $module-quick-links-link-color = $light-blue
+$module-quick-links-link-color-active = $navy
+$module-quick-links-left-border-width = rem(4px)
+$module-quick-links-left-border = $module-quick-links-left-border-width solid transparent
+$module-quick-links-left-border-active = $module-quick-links-left-border-width solid $module-quick-links-link-color-active
 $module-quick-links-link-size = rem(16px)
 $module-quick-links-link-decoration = none
 $module-quick-links-link-weight = $font-weight.bold
