--- a/templates/modules/content/_page-content.twig
+++ b/templates/modules/content/_page-content.twig
@@ -1,83 +1,86 @@
 {% for block in entry.pageContent.all() %}
 <section class="page-content page-content--block block--{{ block.type }}">
 
-  {% if block.type == "richText" %}
+  {% switch block.type %}
+
+    {% case 'richText' %}
     {# RICH TEXT #}
 
-    {{ block.text | typogrify }}
+      {{ block.text | typogrify }}
 
-  {% elseif block.type == "image" %}
+    {% case 'image' %}
     {# IMAGES #}
 
-    <div class="image-grid">
+      <div class="image-grid">
 
-    {% set images = block.image %}
-    {% if images | length == "1" %}
-      {# SINGLE IMAGE #}
+      {% set images = block.image %}
+      {% if images | length == "1" %}
+        {# SINGLE IMAGE #}
 
-      {% set image = images.one() %}
-      {% if craft.app.request.isLivePreview and image.width < 1600 %}
-        <p>Please assign an image that is at least 1600px wide.</p>
-      {% endif %}
-      {% include "modules/images/_grid-image" %}
-
-    {% elseif images | length > "1" %}
-      {# ROW OF IMAGES #}
-
-      {% for image in images.all() %}
+        {% set image = images.one() %}
         {% if craft.app.request.isLivePreview and image.width < 1600 %}
           <p>Please assign an image that is at least 1600px wide.</p>
         {% endif %}
         {% include "modules/images/_grid-image" %}
-      {% endfor %}
 
-    {% endif %}
-    </div>
+      {% elseif images | length > "1" %}
+        {# ROW OF IMAGES #}
 
-  {% elseif block.type == "video" %}
-    <div class="embed-container type-video">
-      {% set video = block.video %}
+        {% for image in images.all() %}
+          {% if craft.app.request.isLivePreview and image.width < 1600 %}
+            <p>Please assign an image that is at least 1600px wide.</p>
+          {% endif %}
+          {% include "modules/images/_grid-image" %}
+        {% endfor %}
 
-      {{video.embed({ width: 1280, height: 720, autoplay: false, default_size: false, iframeClass: 'lazyload', theme: 'light', rel: false })}}
+      {% endif %}
+      </div>
 
-    </div>
+    {% case 'video' %}
+    {# VIDEO #}
+      <div class="embed-container type-video">
+        {% set video = block.video %}
 
-  {% elseif block.type == "embed" %}
+        {{video.embed({ width: 1280, height: 720, autoplay: false, default_size: false, iframeClass: 'lazyload', theme: 'light', rel: false })}}
+
+      </div>
+
+    {% case 'embed' %}
     {# EMBEDDED CONTENT #}
 
-    {% if block.embedUrl.embedData.type == "video" %}
-      {# VIDEO #}
+      {% if block.embedUrl.embedData.type == "video" %}
+        {# VIDEO #}
 
-      <div class="embed-container type-video {{block.embedUrl.embedData.providerName|lower|kebab}}">
-        {% set videoUrl = block.embedUrl.embedData.url %}
-        {{craft.videos.embed(videoUrl, { width: 1280, height: 720, autoplay: false, default_size: false, iframeClass: 'lazyload', theme: 'light', rel: false })}}
+        <div class="embed-container type-video {{block.embedUrl.embedData.providerName|lower|kebab}}">
+          {% set videoUrl = block.embedUrl.embedData.url %}
+          {{craft.videos.embed(videoUrl, { width: 1280, height: 720, autoplay: false, default_size: false, iframeClass: 'lazyload', theme: 'light', rel: false })}}
 
-      </div>
+        </div>
 
-    {% elseif block.embedUrl.embedData.type == "rich" %}
-      {# FACEBOOK/TWITTER #}
+      {% elseif block.embedUrl.embedData.type == "rich" %}
+        {# FACEBOOK/TWITTER #}
 
-      <div class="embed-container type-{{block.embedUrl.embedData.type}} {{block.embedUrl.embedData.providerName|lower|kebab}}">
-        {{ block.embedUrl.embedData.code|replace('<iframe ', '<iframe class="lazyload" ') | raw }}
-      </div>
-    {% else %}
-      {# CATCH-ALL FOR REMAINING #}
+        <div class="embed-container type-{{block.embedUrl.embedData.type}} {{block.embedUrl.embedData.providerName|lower|kebab}}">
+          {{ block.embedUrl.embedData.code|replace('<iframe ', '<iframe class="lazyload" ') | raw }}
+        </div>
+      {% else %}
+        {# CATCH-ALL FOR REMAINING #}
 
-      <div class="embed-container type-{{block.embedUrl.embedData.type}} {{block.embedUrl.embedData.providerName|lower|kebab}}">
-        {{ block.embedUrl.embedData.code|replace('<iframe ', '<iframe class="lazyload" ') | raw }}
-      </div>
+        <div class="embed-container type-{{block.embedUrl.embedData.type}} {{block.embedUrl.embedData.providerName|lower|kebab}}">
+          {{ block.embedUrl.embedData.code|replace('<iframe ', '<iframe class="lazyload" ') | raw }}
+        </div>
 
-    {% endif %}
+      {% endif %}
 
-  {% elseif block.type == "quote" %}
+    {% case 'quote' %}
     {# QUOTES #}
 
-    <blockquote>
-      <p>{{ block.quote | typogrify }}</p>
-      <footer>
-        <cite>{% if block.citeUrl %}<a href="{{ block.citeUrl }}" target="_blank">{% endif %}{{ block.cite | typogrify }}{% if block.citeUrl %}</a>{% endif %}{% if block.citeSecondary %} <em>{{ block.citeSecondary | typogrify }}</em>{% endif %}</cite>
-    </blockquote>
+      <blockquote>
+        <p>{{ block.quote | typogrify }}</p>
+        <footer>
+          <cite>{% if block.citeUrl %}<a href="{{ block.citeUrl }}" target="_blank">{% endif %}{{ block.cite | typogrify }}{% if block.citeUrl %}</a>{% endif %}{% if block.citeSecondary %} <em>{{ block.citeSecondary | typogrify }}</em>{% endif %}</cite>
+      </blockquote>
 
-  {% endif %}
+  {% endswitch %}
 </section>
 {% endfor %}
