--- a/templates/modules/content/_page-content.twig
+++ b/templates/modules/content/_page-content.twig
@@ -81,6 +81,15 @@
           <cite>{% if block.citeUrl %}<a href="{{ block.citeUrl }}" target="_blank">{% endif %}{{ block.cite | typogrify }}{% if block.citeUrl %}</a>{% endif %}{% if block.citeSecondary %} <em>{{ block.citeSecondary | typogrify }}</em>{% endif %}</cite>
       </blockquote>
 
+    {% case 'button' %}
+    {# BUTTON LINK #}
+      {% set buttons = block.entry.all() %}
+      <ul>
+        {% for link in buttons %}
+          <li class="quick-links--item"><a href="{{ link.url }}" title="{{ link.title }}">{{ link.title }}</a></li>
+        {% endfor %}
+      </ul>
+
   {% endswitch %}
 </section>
 {% endfor %}
