--- a/src/styles/modules/_block-home-featured-video.styl
+++ b/src/styles/modules/_block-home-featured-video.styl
@@ -106,7 +106,7 @@
       display block
       height rem(94px)
       transition: background-color $transition-timing
-      mask: embedurl("../sprites/play.svg", "utf8") no-repeat 50% 50%/100% 100%
+      mask: embedurl("../sprites/play.svg", "utf8") no-repeat 50% 50% / contain
       margin-bottom rem(21.5px)
 
     span
