--- a/src/styles/modules/_block-story-share.styl
+++ b/src/styles/modules/_block-story-share.styl
@@ -17,7 +17,7 @@
     width 63%
     margin 0 auto
     padding-bottom 10.5%
-    mask: embedurl("../images/logo-com-champions-v2.svg", "utf8") no-repeat 50% 50%/100% 100%
+    mask: embedurl("../images/logo-com-champions-v2.svg", "utf8") no-repeat 50% 50% / contain
     strong
       @extend .hide-text
 
