--- a/src/styles/site/_homepage.styl
+++ b/src/styles/site/_homepage.styl
@@ -32,7 +32,7 @@
         display table
         height rem(65px)
         width rem(260px)
-        mask: embedurl("../images/logo-com-champions.svg", "utf8") no-repeat 50% 50%/100% 100%
+        mask: embedurl("../images/logo-com-champions.svg", "utf8") no-repeat 50% 50% / contain
         strong
           @extend .hide-text
 
