added contact person block, closes #19

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -889,27 +889,49 @@ $directory-department-description-color = $navy
 $directory-department-description-weight = $font-weight.normal
 $directory-department-description-transform = none
 
-$directory-block-shadow = $global-block-box-shadow
-$directory-block-shadow-hover = $global-block-box-shadow-hover
-$directory-block-image-size-mobile = rem(88.5px)
-$directory-block-image-size-desktop = "58%"
-$directory-block-name-color = $navy
-$directory-block-name-size-mobile = rem(21px)
-$directory-block-name-size-desktop = rem(36px)
 
-$directory-block-title-font = $serif
-$directory-block-title-style = italic
-$directory-block-title-color = $light-blue
-$directory-block-title-size-mobile = rem(12px)
-$directory-block-title-size-desktop = rem(18.61px)
+// ------------------------------------------------------
+// ------ BLOCK
+// ------ STAFF MEMBER
 
+$module-person-shadow = $global-block-box-shadow
+$module-person-shadow-hover = $global-block-box-shadow-hover
+$module-person-image-size-mobile = rem(88.5px)
+$module-person-image-size-desktop = "58%"
+$module-person-name-color = $navy
+$module-person-name-size-mobile = rem(21px)
+$module-person-name-size-desktop = rem(36px)
+
+$module-person-title-font = $serif
+$module-person-title-style = italic
+$module-person-title-color = $light-blue
+$module-person-title-size-mobile = rem(12px)
+$module-person-title-size-desktop = rem(18.61px)
+
+$module-person-contact-top-border = $border-width-base solid $gray94
+$module-person-contact-person-title-font = $sans-serif-headline
+$module-person-contact-person-title-color = $navy
+$module-person-contact-person-title-size-mobile = rem(21px)
+$module-person-contact-person-title-size-desktop = rem(32px)
+
+$module-person-contact-image-size-mobile = rem(85px)
+$module-person-contact-image-size-desktop = rem(85px)
+$module-person-contact-image-border-width-mobile = rem(7.5px)
+$module-person-contact-image-border-width-desktop = rem(7.5px)
+$module-person-contact-arrow-color = $light-blue
+
+$module-person-contact-list-color = $navy
+$module-person-contact-list-size-mobile = rem(14px)
+$module-person-contact-list-size-desktop = rem(18px)
+$module-person-contact-list-title-weight = $font-weight.bold
+$module-person-contact-list-list-style = italic
 
 // ------------------------------------------------------
 // ------ STAFF DIRECTORY -- PROFILE
 
 $directory-profile-image-block-shadow = $global-block-box-shadow
 $directory-profile-image-size-mobile = rem(200px)
-$directory-profile-image-size-desktop = $directory-block-image-size-mobile
+$directory-profile-image-size-desktop = $module-person-image-size-mobile
 
 $directory-profile-name-color = $navy
 $directory-profile-name-size-mobile = rem(40px)
