--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -50,6 +50,7 @@ $fa-font-path = "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
 @import './modules/_block-story-share'
 @import './modules/_block-home-featured-video'
 @import './modules/_block-location'
+@import './modules/_block-staff-member'
 
 @import './site/*'
 
