--- a/templates/structure/departments/_sub.twig
+++ b/templates/structure/departments/_sub.twig
@@ -24,6 +24,7 @@
 
     {% include "modules/content/_page-content" %}
     {% include "modules/content/_page-content-attachments" %}
+    {% include 'modules/content/_block-contact-person.twig' %}
 {% endcache %}
 {% endblock %}
 
