--- a/templates/structure/news-events/_types/_pressRelease.twig
+++ b/templates/structure/news-events/_types/_pressRelease.twig
@@ -10,3 +10,4 @@
 
 {% include "modules/content/_page-content" %}
 {% include "modules/content/_page-content-attachments" %}
+{% include 'modules/content/_block-contact-person.twig' %}
