--- a/templates/structure/pages/_types/_standard.twig
+++ b/templates/structure/pages/_types/_standard.twig
@@ -6,4 +6,5 @@
 
 {% include "modules/content/_page-content" %}
 {% include "modules/content/_page-content-attachments" %}
+{% include 'modules/content/_block-contact-person.twig' %}
 {% endcache %}
