--- a/src/styles/modules/_block-quick-links.styl
+++ b/src/styles/modules/_block-quick-links.styl
@@ -60,7 +60,8 @@
 // STYLES FOR WHEN USED IN MAIN COLUMN
 #content #block--subpages
 #content #block--quick-links
-#content .page-content--block.block--button
+#content .page-content--block.block--buttonInternal
+#content .page-content--block.block--buttonExternal
   > h3
     text-align left
 
