--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -909,7 +909,7 @@ $module-person-title-size-mobile = rem(12px)
 $module-person-title-size-desktop = rem(18.61px)
 
 $module-person-contact-top-border = $border-width-base solid $gray94
-$module-person-contact-person-title-font = $sans-serif-headline
+$module-person-contact-person-title-font = $sans-serif
 $module-person-contact-person-title-color = $navy
 $module-person-contact-person-title-size-mobile = rem(21px)
 $module-person-contact-person-title-size-desktop = rem(32px)
