--- a/templates/modules/content/_block-weather-tip.twig
+++ b/templates/modules/content/_block-weather-tip.twig
@@ -1,3 +1,4 @@
 <section id="block--weather-tip">
-  <a data-fancybox data-options='{"toolbar" : false, "smallBtn" : true, "iframe" : { "css" : { "height" : "220px" }, "preload" : true }, "src" : "https://embed.windy.com/embed2.html?lat=40.558508&lon=-85.659925&type=forecast&metricWind=mph&metricTemp=%C2%B0F", "type" : "iframe"}' href="javascript:;" title="Weather">Weather</a>
+  {# <a data-fancybox data-options='{"toolbar" : false, "smallBtn" : true, "iframe" : { "css" : { "height" : "220px" }, "preload" : true }, "src" : "https://embed.windy.com/embed2.html?lat=40.558508&lon=-85.659925&type=forecast&metricWind=mph&metricTemp=%C2%B0F", "type" : "iframe"}' href="javascript:;" title="Weather">Weather</a> #}
+  <a href="http://f1.weather.gov/MapClick.php?lat=40.55359520000002&lon=-85.42842509999997#.Wgsdr1tSypo" title="Weather" target="_blank">Weather</a>
 </section>
