--- a/src/styles/site/_content.styl
+++ b/src/styles/site/_content.styl
@@ -17,11 +17,11 @@
   ol
     line-height: $content-text-line-height
 
-  ul
-  ol
-    padding-left: 0
-    margin-left: 0
-    list-style-type: none
+  // ul
+  // ol
+  //   padding-left: 0
+  //   margin-left: 0
+  //   list-style-type: none
 
   p
     font-size $content-text-size
@@ -111,6 +111,9 @@
       white-space pre-wrap
       background-color transparent
       border-radius 0
+  
+  hr
+    margin 3em 0
 
 .image-grid
   // our flexbox container
